# CAQ

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  caq-test  caq-test.c  caq-test.pc.in  caq.c  caq.h  caq_test_config  libcaq.c  libcaq.pc.in  libcaq_config
